@@ -12,6 +12,7 @@ Version 1.0.2 to be released
 - Bug #83: yiic command may unexpectedly render its starting line on Windows (Qiang)
 - Bug #87: yiic gives an error when using yiilite.php in the main application (Qiang)
 - Bug #91: Relational AR eager fetching may bring back result even if it shouldn't (Qiang)
+- Bug #109: CLinkPager shows wrong number of page buttons (Qiang)
 - Bug: CDbAuthManager::saveAuthAssignment() causes updating all rows (Qiang)
 - Bug: Fixed an issue in CUrlManager::createUrl when GET parameters contain arrays (Qiang)
 - New #88: Added public properties to CActiveRecord::safeAttributes() (Qiang)
